@@ -1,5 +1,10 @@
 2009-04-14  Thomas Moulard  <thomas.moulard@gmail.com>
 
+	Fix constraints display in Problem::print.
+	* include/liboptimization/problem.hxx: Here.
+
+2009-04-14  Thomas Moulard  <thomas.moulard@gmail.com>
+
 	Use more precise failure messages in Ipopt bridge.
 	* src/ipopt.cc: Here.
 
